# Password-Intelligence1

./: README.md  ai_suggestions.py  app.py  models.py  password_analyzer.py  password_generator.py  pyproject.toml  render.yml  requirements.txt  train_model.py  translations.py
data/: rockyou_sample.txt
static/css/: style.css
static/js/: main.js
templates/: about.html  base.html  index.html
