[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "groq>=0.20.0",
    "gunicorn>=23.0.0",
    "numpy>=2.2.4",
    "openai>=1.68.2",
    "password-generator>=0.1.0",
    "psycopg2-binary>=2.9.10",
    "scikit-learn>=1.6.1",
]
